--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -1,10 +1,14 @@
 ## 1.用 reactive 定义数组后，直接赋值替换，会中断响应式
 
 用 reactive 声明响应式代理后，是一个新的数据，直接赋值会将 proxy 替换掉，中断响应式
-替代方法： 1.变量定义在 reactive 的属性中(定义在 data 上) 2.通过 ref 定义
+替代方法： 
+1.变量定义在 reactive 的属性中(定义在 data 上) 
+2.通过 ref 定义
+```
 const obj = reactive({
 data: {}
 })
+```
 
 const obj = ref({})
 
