--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -10,13 +10,14 @@ const obj = reactive({
       data: {}
 })
 
-```
-
 const obj = ref({})
 
-2.请求接口后返回的数据格式在哪里设置（axios 中配置？）
+```
+
+## 2.请求接口后返回的数据格式在哪里设置（axios 中配置？）
 可参照问题 3
-3.axios 中如何设置的 get、post 请求的格式
+
+## 3.axios 中如何设置的 get、post 请求的格式
 一般通过 config 来进行配置
 var ApiService = axios.create({
 baseURL: process.env.VUE_APP_BASE_API, // 接口统一域名
@@ -37,11 +38,11 @@ return ApiService.post(url, data, config)
 }
 axios 中关于参数的说明
 图片: https://uploader.shimo.im/f/LN492CMAj0ldIrUG.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
-4.dialog 中使用 form 表单验证，关闭后重新打开会默认校验（即打开还未填写就报校验错误）
+## 4.dialog 中使用 form 表单验证，关闭后重新打开会默认校验（即打开还未填写就报校验错误）
 解决：可能是 key 的问题，两种方式处理
 给组件 dialog 添加 key 做唯一的标识，form 表单校验不报错了，但是每次打开页面的时候屏幕都会闪一下
 组件使用 v-if,每次打开的时候组件都要重新加载，校验不报错，但是 dialog 没有了动画效果，会有生硬的感觉
-5.element 使用 upload 组件上传功能，但不想使用中转服务器，想要把上传的文件和 form 表单的信息一起提交给后台
+## 5.element 使用 upload 组件上传功能，但不想使用中转服务器，想要把上传的文件和 form 表单的信息一起提交给后台
 el-upload 组件中 action 设置为空，属性绑定 on-change 事件，获取到上传的文件，将文件传给后台即可 6.使用 formData 发送 post 请求的方式
 const formData = new FormData()
 for (const key in queryInfo) {
@@ -49,9 +50,9 @@ for (const key in queryInfo) {
 formData.append(key, queryInfo.value[key])
 }
 postAdd(formData)
-7.computed 如何正确定义数据时依赖其他数据
+## 7.computed 如何正确定义数据时依赖其他数据
 
-8.vue 中使用防抖和节流的方式
+## 8.vue 中使用防抖和节流的方式
 解决：debounce 返回的是一个方法，要用一个变量接一下然后调用，不能直接调用
 参照： 如何在 Vue 中使用 防抖 和 节流
 vue 中使用 lodash Debounce 防抖不生效原因
@@ -72,7 +73,7 @@ const debounceSearch = debounce(getInterfaceData, 500)
 onBeforeUnmount(() => {
 debounceSearch.cancel()
 })
-9.reactive 定义对象未定义属性，后来添加属性时，属性可能非定义的结构类型
+## 9.reactive 定义对象未定义属性，后来添加属性时，属性可能非定义的结构类型
 开始未定义 pagerConfig，通过 showPager 判断是否添加 pagerConfig 属性，pageConfig 中 total 属性开始是整型，后台变为 object，像是通过 ref 定义包了一层，通过.value 取值
 
 const xTableOptions = reactive({
@@ -119,11 +120,11 @@ pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
 layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
 }
 }
-10.reduce 快速实现求和
-11.import 导入的变量或者方法如何直接在 template 中使用
-12.post 请求将参数拼接到 url 中
+## 10.reduce 快速实现求和
+## 11.import 导入的变量或者方法如何直接在 template 中使用
+## 12.post 请求将参数拼接到 url 中
 vue post application/x-www-form-urlencoded 传参的解决方案
-13.vue3 父子组件通信实现数据响应式的操作
+## 13.vue3 父子组件通信实现数据响应式的操作
 解决方法：引用类型的数据都可以
 一.父组件写法
 1.v-model 的形式
@@ -152,7 +153,7 @@ required: true
 }
 })
 const dialogForm = reactive(props.formData)
-14.vue3 setUp 写法引入组件
+## 14.vue3 setUp 写法引入组件
 // 错误方式
 import {addMetricDialog} from '../dialog/createMetric.vue'
 // 正确方式
@@ -207,7 +208,7 @@ action.call(cxt)
 }
 上面代码可以考虑另一种思路，不使用解构的方式传入，在 function 内部用相同的变量接受(不影响原数据使用深拷贝)，执行相同的操作
 
-16.flex 布局下，子模块显示滚动条
+## 16.flex 布局下，子模块显示滚动条
 想要的效果：红色部分出滚
 要点：父级元素设置为 hidden,只在出滚的元素上加 auto
 图片: https://uploader.shimo.im/f/OJdKHSnNIHG0SD0M.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
@@ -237,7 +238,7 @@ background: $color-white;
         }
       }
 }
-17.vue打开新页面
+## 17.vue打开新页面
 正常使用window.open就可以，但是vue中需要借助router.resolve，且在根路由下设置
 根路由添加：
 {
@@ -256,7 +257,7 @@ const routeData = router.resolve({
   }
 })
 window.open(routeData.href, '_blank')
-18.vue下载文件流方式且提示缺少token
+## 18.vue下载文件流方式且提示缺少token
 // 通用下载方法
 let uploadAxios = axios.create({
   baseURL: process.env.NODE_ENV === 'development' ? process.env.VUE_APP_BASE_API : ''
@@ -325,7 +326,7 @@ height: 512px;
 overflow: auto;
 }
 }
-18.onMounted 调用时报错：onMounted is called when there is no active component instance to be associated with. Lifecycle injection APIs can only be used during execution of setup(). If you are using async setup(), make sure to register lifecycle hooks before the first await statement.
+## 18.onMounted 调用时报错：onMounted is called when there is no active component instance to be associated with. Lifecycle injection APIs can only be used during execution of setup(). If you are using async setup(), make sure to register lifecycle hooks before the first await statement.
 const props = defineProps({
 modelValue: {
 type: Object,
@@ -377,7 +378,7 @@ if (res && res.data) {
 dialogTable.data = res.data
 }
 }
-19.element table 将多选框改为单选框的方法
+## 19.element table 将多选框改为单选框的方法
 element table 将多选框改为单选框的方法
 
 // 只能单选，其他非禁选
@@ -417,7 +418,7 @@ return mItem
 })
 }
 }
-20.echart tree 滚轮缩放页面时，字体同时缩放
+## 20.echart tree 滚轮缩放页面时，字体同时缩放
 // mousewheel 是鼠标滚轮事件
 onMounted(() => {
 // 注册 mousewheel
@@ -447,15 +448,15 @@ data: [echartsData]
 }
 ]
 }
-21.tabs 简单切换的情况下最好自己写样式，用 el-tabs 时内容的撑开是一个问题
+## 21.tabs 简单切换的情况下最好自己写样式，用 el-tabs 时内容的撑开是一个问题
 解决方式： 1.计算高度，减去上面内容的高度
 2.flex 布局实现有些麻烦，flex 需要一层一层的嵌套下去才能生效，而 ele-tabs 封装了很多层，
 需要自己 deep 去一层一层改，比较麻烦
 
-22.警告 v-deep
+## 22.警告 v-deep
 ::v-deep usage as a combinator has been deprecated. Use :deep(<inner-selector>) instead. 23.使用 element-ui form 表单时，resetField 重置表单是根据 form 的初始值进行重置，比如使用的是 prop 动态传入的 form 值，那重置是按照每次传入的 prop 值进行重置
-24.chrome 上切片的视频不支持拖拽，切片后的视频格式是 m3u8，设计如此，firefox 上支持拖拽
-25.el-form 表单校验，非必填项但输入后有限制要求的写法
+## 24.chrome 上切片的视频不支持拖拽，切片后的视频格式是 m3u8，设计如此，firefox 上支持拖拽
+## 25.el-form 表单校验，非必填项但输入后有限制要求的写法
 A：el-form-item 绑定 prop
 B：rules 中定义绑定的 prop 值，设置 required：false
 <el-form-item label="课程方向" prop="courseDirection">
@@ -468,12 +469,12 @@ courseDirection: [
 ],
 
 2023.06.12 云实训项目问题汇总
-26.elementPlus-upload 上传文件过程中，中断上传操作(一般用于文件过大，关闭上传弹框后中断上传操作)
+## 26.elementPlus-upload 上传文件过程中，中断上传操作(一般用于文件过大，关闭上传弹框后中断上传操作)
 import axios from 'axios'
 
 const CancelToken = axios.CancelToken
 // formData 中在 http 头部添加 cancelToken 参数
-27.element-pluss form
+## 27.element-pluss form
 原因
 
 在一个 form 表单中，若只有一个 input，按回车键表单会自动提交，但是当表单中存在多个 input 时，按回车键不会执行任何操作，这是 form 表单的一个特性。
