--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -19,6 +19,8 @@ const obj = ref({})
 
 ## 3.axios 中如何设置的 get、post 请求的格式
 一般通过 config 来进行配置
+``` javascript
+
 var ApiService = axios.create({
 baseURL: process.env.VUE_APP_BASE_API, // 接口统一域名
 timeout: 50000 // 设置超时
@@ -36,6 +38,9 @@ data.append(key, params[key])
 }
 return ApiService.post(url, data, config)
 }
+
+```
+
 axios 中关于参数的说明
 图片: https://uploader.shimo.im/f/LN492CMAj0ldIrUG.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
 ## 4.dialog 中使用 form 表单验证，关闭后重新打开会默认校验（即打开还未填写就报校验错误）
