--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -42,6 +42,8 @@ ApiService.fetchPost = (url, params) => {
 ```
 
 axios 中关于参数的说明
+![image](https://github.com/HowToMeetYou/blog--/assets/41479550/4e46f3ab-e5e8-4bbc-b0c9-897a3025a462)
+
 图片: https://uploader.shimo.im/f/LN492CMAj0ldIrUG.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
 ## 4.dialog 中使用 form 表单验证，关闭后重新打开会默认校验（即打开还未填写就报校验错误）
 解决：可能是 key 的问题，两种方式处理
