--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -44,19 +44,23 @@ ApiService.fetchPost = (url, params) => {
 axios 中关于参数的说明
 ![image](https://github.com/HowToMeetYou/blog--/assets/41479550/4e46f3ab-e5e8-4bbc-b0c9-897a3025a462)
 
-图片: https://uploader.shimo.im/f/LN492CMAj0ldIrUG.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
 ## 4.dialog 中使用 form 表单验证，关闭后重新打开会默认校验（即打开还未填写就报校验错误）
 解决：可能是 key 的问题，两种方式处理
-给组件 dialog 添加 key 做唯一的标识，form 表单校验不报错了，但是每次打开页面的时候屏幕都会闪一下
-组件使用 v-if,每次打开的时候组件都要重新加载，校验不报错，但是 dialog 没有了动画效果，会有生硬的感觉
+- 1.给组件 dialog 添加 key 做唯一的标识，form 表单校验不报错了，但是每次打开页面的时候屏幕都会闪一下
+- 2.组件使用 v-if,每次打开的时候组件都要重新加载，校验不报错，但是 dialog 没有了动画效果，会有生硬的感觉
 ## 5.element 使用 upload 组件上传功能，但不想使用中转服务器，想要把上传的文件和 form 表单的信息一起提交给后台
-el-upload 组件中 action 设置为空，属性绑定 on-change 事件，获取到上传的文件，将文件传给后台即可 6.使用 formData 发送 post 请求的方式
+el-upload 组件中 action 设置为空，属性绑定 on-change 事件，获取到上传的文件，将文件传给后台即可 
+## 6.使用 formData 发送 post 请求的方式
+``` javascript
+
 const formData = new FormData()
 for (const key in queryInfo) {
 //key: value 的形式
-formData.append(key, queryInfo.value[key])
+      formData.append(key, queryInfo.value[key])
 }
 postAdd(formData)
+```
+
 ## 7.computed 如何正确定义数据时依赖其他数据
 
 ## 8.vue 中使用防抖和节流的方式
