--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -67,9 +67,13 @@ postAdd(formData)
 解决：debounce 返回的是一个方法，要用一个变量接一下然后调用，不能直接调用
 参照： 如何在 Vue 中使用 防抖 和 节流
 vue 中使用 lodash Debounce 防抖不生效原因
+``` html
+
 <form-wrapper @search="reset" @reset="reset"></form-wrapper>
+
 import { debounce } from 'lodash-es'
-以下方式均不生效 1.直接放在方法中
+以下方式均不生效 
+1.直接放在方法中
 const reset = () => {
 debounce(getData, 500)
 } 2.放在方法中匿名调用
@@ -84,6 +88,7 @@ const debounceSearch = debounce(getInterfaceData, 500)
 onBeforeUnmount(() => {
 debounceSearch.cancel()
 })
+
 ## 9.reactive 定义对象未定义属性，后来添加属性时，属性可能非定义的结构类型
 开始未定义 pagerConfig，通过 showPager 判断是否添加 pagerConfig 属性，pageConfig 中 total 属性开始是整型，后台变为 object，像是通过 ref 定义包了一层，通过.value 取值
 
