--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -71,22 +71,33 @@ vue 中使用 lodash Debounce 防抖不生效原因
 
 <form-wrapper @search="reset" @reset="reset"></form-wrapper>
 
+```
+``` javascript
+
 import { debounce } from 'lodash-es'
 以下方式均不生效 
 1.直接放在方法中
 const reset = () => {
-debounce(getData, 500)
-} 2.放在方法中匿名调用
+      debounce(getData, 500)
+}
+2.放在方法中匿名调用
 const reset = () => {
-debounce(getData, 500)（）
+      debounce(getData, 500)（）
 }
 正确的方式
+``` html
+
 <form-wrapper @search="reset" @reset="debounceSearch"></form-wrapper>
+
+```
+``` javascript
+
 import { debounce } from 'lodash-es'
 const debounceSearch = debounce(getInterfaceData, 500)
+
 // 卸载前取消所有 pending
 onBeforeUnmount(() => {
-debounceSearch.cancel()
+      debounceSearch.cancel()
 })
 
 ```
