--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -109,33 +109,40 @@ onBeforeUnmount(() => {
 ## 9.reactive 定义对象未定义属性，后来添加属性时，属性可能非定义的结构类型
 开始未定义 pagerConfig，通过 showPager 判断是否添加 pagerConfig 属性，pageConfig 中 total 属性开始是整型，后台变为 object，像是通过 ref 定义包了一层，通过.value 取值
 
+``` javascript
+
 const xTableOptions = reactive({
-loading: false,
-border: true,
-stripe: true,
-autoResize: true,
-height: xTableHeight,
-align: 'center',
-// pagerConfig: null,
-sortConfig: {
-defaultSort: {
-field,
-order: 'desc'
-}
+      loading: false,
+      border: true,
+      stripe: true,
+      autoResize: true,
+      height: xTableHeight,
+      align: 'center',
+      // pagerConfig: null,
+      sortConfig: {
+      defaultSort: {
+            field,
+            order: 'desc'
+      }
 },
 data: [],
 columns: []
 })
 if (showPager) {
-xTableOptions.pagerConfig = {
-// 默认每页大小
-total: 0,
-pageSize: 20,
-currentPage: 1,
-pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
-layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
+      xTableOptions.pagerConfig = {
+      // 默认每页大小
+      total: 0,
+      pageSize: 20,
+      currentPage: 1,
+      pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
+      layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
+      }
 }
-}
+
+```
+
+![image](https://github.com/HowToMeetYou/blog--/assets/41479550/391a9a02-5cec-4493-bed6-893d228a66b5)
+
 图片: https://uploader.shimo.im/f/WVjqRjkXHOjJPVB6.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
 
 解决方法：定义 pagerConfig 初始值为 null，再条件判断是否需要添加属性
