--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -143,32 +143,43 @@ if (showPager) {
 
 ![image](https://github.com/HowToMeetYou/blog--/assets/41479550/391a9a02-5cec-4493-bed6-893d228a66b5)
 
-图片: https://uploader.shimo.im/f/WVjqRjkXHOjJPVB6.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
 
 解决方法：定义 pagerConfig 初始值为 null，再条件判断是否需要添加属性
+``` javascript
+
 const xTableOptions = reactive({
 //定义初始值 null
-pagerConfig: null,
+      pagerConfig: null,
 })
 if (showPager) {
-xTableOptions.pagerConfig = {
-// 默认每页大小
-total: 0,
-pageSize: 20,
-currentPage: 1,
-pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
-layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
+      xTableOptions.pagerConfig = {
+      // 默认每页大小
+            total: 0,
+            pageSize: 20,
+            currentPage: 1,
+            pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
+            layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
+      }
 }
-}
+
+```
 ## 10.reduce 快速实现求和
 ## 11.import 导入的变量或者方法如何直接在 template 中使用
 ## 12.post 请求将参数拼接到 url 中
+``` javascript
+
 vue post application/x-www-form-urlencoded 传参的解决方案
+
+```
 ## 13.vue3 父子组件通信实现数据响应式的操作
 解决方法：引用类型的数据都可以
 一.父组件写法
-1.v-model 的形式
-<addMetricDialog v-if="dialogForm.visible" v-model="dialogForm" @createMetric="createMetric" /> 2.属性绑定的形式
+- 1.v-model 的形式
+``` html
+<addMetricDialog v-if="dialogForm.visible" v-model="dialogForm" @createMetric="createMetric" /> 
+```
+
+- 2.属性绑定的形式
 <addMetricDialog v-if="dialogForm.visible" :form-data="dialogForm" @createMetric="createMetric" />
 
 二.子组件写法
