--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -31,7 +31,7 @@ ApiService.fetchPost = (url, params) => {
                   'Content-Type': 'application/x-www-form-urlencoded'
             }
       }
-      // 使用 URLSearchParams 封装 params 传入的参数
+      // 使用 URLSearchParams 封装 params 传入的参数s
       let data = new URLSearchParams()
       for (const key in params) {
             data.append(key, params[key])
