--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -120,22 +120,22 @@ const xTableOptions = reactive({
       align: 'center',
       // pagerConfig: null,
       sortConfig: {
-      defaultSort: {
-            field,
-            order: 'desc'
-      }
-},
+            defaultSort: {
+                  field,
+                  order: 'desc'
+            }
+      },
 data: [],
 columns: []
 })
 if (showPager) {
       xTableOptions.pagerConfig = {
-      // 默认每页大小
-      total: 0,
-      pageSize: 20,
-      currentPage: 1,
-      pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
-      layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
+            // 默认每页大小
+            total: 0,
+            pageSize: 20,
+            currentPage: 1,
+            pageSizes: [10, 20, 100, { label: '全量数据', value: -1 }],
+            layouts: ['PrevPage', 'JumpNumber', 'NextPage', 'FullJump', 'Sizes', 'Total']
       }
 }
 
@@ -180,30 +180,36 @@ vue post application/x-www-form-urlencoded 传参的解决方案
 ```
 
 - 2.属性绑定的形式
+``` html
 <addMetricDialog v-if="dialogForm.visible" :form-data="dialogForm" @createMetric="createMetric" />
+```
 
 二.子组件写法
-1.v-model 写法
+- 1.v-model 写法
+``` javascript
 const props = defineProps({
-modelValue: {
-type: Object,
-ddfault: () => {}
-},
-formData: {
-type: Object,
-required: true
-}
+      modelValue: {
+            type: Object,
+            ddfault: () => {}
+      },
+      formData: {
+            type: Object,
+            required: true
+      }
 })
 const dialogForm = reactive(props.modelValue)
+```
 
 2.属性绑定写法
+``` javascript
 const props = defineProps({
-formData: {
-type: Object,
-required: true
-}
+      formData: {
+            type: Object,
+            required: true
+      }
 })
 const dialogForm = reactive(props.formData)
+```
 ## 14.vue3 setUp 写法引入组件
 // 错误方式
 import {addMetricDialog} from '../dialog/createMetric.vue'
