--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -48,6 +48,7 @@ axios 中关于参数的说明
 解决：可能是 key 的问题，两种方式处理
 - 1.给组件 dialog 添加 key 做唯一的标识，form 表单校验不报错了，但是每次打开页面的时候屏幕都会闪一下
 - 2.组件使用 v-if,每次打开的时候组件都要重新加载，校验不报错，但是 dialog 没有了动画效果，会有生硬的感觉
+- 3.目前使用的方法，通过组件定义openDialog方法并通过defineExpose抛出，每次打开时在openDialog中调用表单的clearVilate清楚校验方法
 ## 5.element 使用 upload 组件上传功能，但不想使用中转服务器，想要把上传的文件和 form 表单的信息一起提交给后台
 el-upload 组件中 action 设置为空，属性绑定 on-change 事件，获取到上传的文件，将文件传给后台即可 
 ## 6.使用 formData 发送 post 请求的方式
