--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -167,11 +167,8 @@ if (showPager) {
 ## 10.reduce 快速实现求和
 ## 11.import 导入的变量或者方法如何直接在 template 中使用
 ## 12.post 请求将参数拼接到 url 中
-``` javascript
+[vue post application/x-www-form-urlencoded 传参的解决方案](https://blog.csdn.net/yangwqi/article/details/115111906)
 
-vue post application/x-www-form-urlencoded 传参的解决方案
-
-```
 ## 13.vue3 父子组件通信实现数据响应式的操作
 解决方法：引用类型的数据都可以
 一.父组件写法
