--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -65,7 +65,7 @@ postAdd(formData)
 ## 7.computed 如何正确定义数据时依赖其他数据
 
 ## 8.vue 中使用防抖和节流的方式
-解决：debounce 返回的是一个方法，要用一个变量接一下然后调用，不能直接调用
+解决：debounce 返回的是一个方法，要用一个变量接一下然后调用，不能直接调用</br>
 参照： 如何在 Vue 中使用 防抖 和 节流
 vue 中使用 lodash Debounce 防抖不生效原因
 ``` html
