--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -209,13 +209,16 @@ const props = defineProps({
 const dialogForm = reactive(props.formData)
 ```
 ## 14.vue3 setUp 写法引入组件
+``` javascript
 // 错误方式
 import {addMetricDialog} from '../dialog/createMetric.vue'
 // 正确方式
-import addMetricDialog from '../dialog/createMetric.vue' 15.想通过封装后传入相同名称的变量，执行相同的操作无法实现代码的简化
-解决方法：传入不同变量后，条件判断执行不同的操作
-无法实现的方式：调用 function 时，传入相同的参数名称(实际是不同的变量)，
-对同一变量进行操作无法实现，可能是解构的原因，失去响应式
+import addMetricDialog from '../dialog/createMetric.vue'
+```
+## 15.想通过封装后传入相同名称的变量，执行相同的操作无法实现代码的简化
+解决方法：传入不同变量后，条件判断执行不同的操作</br>
+无法实现的方式：调用 function 时，传入相同的参数名称(实际是不同的变量)，对同一变量进行操作无法实现，可能是解构的原因，失去响应式
+``` javascript
 const levelOneList = ref([])
 const levelTwoList = ref([])
 const metricOneObj= ref({})
@@ -223,76 +226,82 @@ const metriTwoObj= ref({})
 addLevel({ levelList: levelOneList, metricObj: metricOneObj, params})
 addLevel({ levelList: levelTwoList, metricObj: metriTwoObj, params})
 const addLevel = ({ levelList, type, params }) => {
-let { itemName = '', orderNum, parentId = null, targetSystemId, targetSystemLevelId } = metricOneObj.value
-orderNum = levelList.value.length + 1
-await postCreateLevelOne()
-await reqLevelList(metricObj.value.targetSystemLevelId)
+      let { itemName = '', orderNum, parentId = null, targetSystemId, targetSystemLevelId } = metricOneObj.value
+      orderNum = levelList.value.length + 1
+      await postCreateLevelOne()
+      await reqLevelList(metricObj.value.targetSystemLevelId)
 }
+``` javascript
 
 解决代码:
 通过 type 判断后，不同的条件执行不同的操作，1 时操作 levelOne,2 时操作 levelTwo，诸如此类
+``` javascript
 const addLevel = ({ type, params }) => {
-// 使用 Map 进行条件判断
-const actions = new Map([
-[1, async() => {
-// TODO 此处要调接口
-let { itemName = '', orderNum, parentId = null, targetSystemId, targetSystemLevelId } = metricOneObj.value
-orderNum = levelOneList.value.length + 1
-await reqLevelList(metricOneObj.value.targetSystemLevelId)
-}],
-[2, async() => {
-// TODO 此处要调接口
-let { targetSystemItemId } = params
-let { targetSystemId, targetSystemLevelId } = metricTwoObj.value
-let orderNum = levelTwoList.value.length + 1
-levelTwoList.value = await getChildren(targetSystemItemId)
-}],
-[3, async() => {
-// TODO 此处要调接口
-let { targetSystemItemId } = params
-let { targetSystemId, targetSystemLevelId } = metricThreeObj.value
-let orderNum = levelThreeList.value.length + 1
-levelThreeList.value = await getChildren(targetSystemItemId)
-}],
-['default', () => {
-console.log('none match')
-}]
-])
-const action = actions.get(type) || actions.get('default')
-action.call(cxt)
+      // 使用 Map 进行条件判断
+      const actions = new Map([
+            [1, async() => {
+                  // TODO 此处要调接口
+                  let { itemName = '', orderNum, parentId = null, targetSystemId, targetSystemLevelId } = metricOneObj.value
+                  orderNum = levelOneList.value.length + 1
+                  await reqLevelList(metricOneObj.value.targetSystemLevelId)
+            }],
+            [2, async() => {
+                  // TODO 此处要调接口
+                  let { targetSystemItemId } = params
+                  let { targetSystemId, targetSystemLevelId } = metricTwoObj.value
+                  let orderNum = levelTwoList.value.length + 1
+                  levelTwoList.value = await getChildren(targetSystemItemId)
+            }],
+            [3, async() => {
+                  // TODO 此处要调接口
+                  let { targetSystemItemId } = params
+                  let { targetSystemId, targetSystemLevelId } = metricThreeObj.value
+                  let orderNum = levelThreeList.value.length + 1
+                  levelThreeList.value = await getChildren(targetSystemItemId)
+            }],
+            ['default', () => {
+                  console.log('none match')
+            }]
+      ])
+      const action = actions.get(type) || actions.get('default')
+      action.call(cxt)
 }
+```
 上面代码可以考虑另一种思路，不使用解构的方式传入，在 function 内部用相同的变量接受(不影响原数据使用深拷贝)，执行相同的操作
 
 ## 16.flex 布局下，子模块显示滚动条
 想要的效果：红色部分出滚
 要点：父级元素设置为 hidden,只在出滚的元素上加 auto
-图片: https://uploader.shimo.im/f/OJdKHSnNIHG0SD0M.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
+![image](https://github.com/HowToMeetYou/blog--/assets/41479550/e32cf122-786b-4d4b-9a11-727fe85e146f)
+
+``` scss
 .neu-metric-add {
 flex: 1;
 display: flex;
 flex-direction: column;
 border-radius: 8px;
 background: $color-white;
-      overflow: hidden;
-      .neu-metric-content {
-        overflow: hidden;
-        display: flex;
-        flex: 1;
-        .content-common {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          border-top: 1px solid #eeeeee;
-          &:nth-child(2) {
-            border-left: 1px solid #eeeeee;
-            border-right: 1px solid #eeeeee;
-          }
-          .one-content {
-            overflow: auto;
-          }
-        }
-      }
+overflow: hidden;
+.neu-metric-content {
+  overflow: hidden;
+  display: flex;
+  flex: 1;
+  .content-common {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid #eeeeee;
+    &:nth-child(2) {
+      border-left: 1px solid #eeeeee;
+      border-right: 1px solid #eeeeee;
+    }
+    .one-content {
+      overflow: auto;
+    }
+  }
 }
+}
+```
 ## 17.vue打开新页面
 正常使用window.open就可以，但是vue中需要借助router.resolve，且在根路由下设置
 根路由添加：
