--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -276,35 +276,36 @@ const addLevel = ({ type, params }) => {
 
 ``` scss
 .neu-metric-add {
-flex: 1;
-display: flex;
-flex-direction: column;
-border-radius: 8px;
-background: $color-white;
-overflow: hidden;
-.neu-metric-content {
-  overflow: hidden;
-  display: flex;
-  flex: 1;
-  .content-common {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    border-top: 1px solid #eeeeee;
-    &:nth-child(2) {
-      border-left: 1px solid #eeeeee;
-      border-right: 1px solid #eeeeee;
-    }
-    .one-content {
-      overflow: auto;
-    }
-  }
- }
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	border-radius: 8px;
+	background: $color-white;
+	overflow: hidden;
+	.neu-metric-content {
+	  overflow: hidden;
+	  display: flex;
+	  flex: 1;
+	  .content-common {
+	    flex: 1;
+	    display: flex;
+	    flex-direction: column;
+	    border-top: 1px solid #eeeeee;
+	    &:nth-child(2) {
+	      border-left: 1px solid #eeeeee;
+	      border-right: 1px solid #eeeeee;
+	    }
+	    .one-content {
+	      overflow: auto;
+	    }
+	  }
+	}
 }
 ```
 ## 17.vue打开新页面
 正常使用window.open就可以，但是vue中需要借助router.resolve，且在根路由下设置
 根路由添加：
+``` javascript
 {
   name: 'previewEcharts',
   path: '/previewEcharts',
@@ -312,7 +313,9 @@ overflow: hidden;
     title: '预览'
   },
   component: () => import('@/views/pages/system/metric/components/echartsTree.vue')
-}, 
+},
+```
+``` javascript
 页面代码：
 const routeData = router.resolve({
   name: 'previewEcharts',
@@ -321,27 +324,29 @@ const routeData = router.resolve({
   }
 })
 window.open(routeData.href, '_blank')
+```
 ## 18.vue下载文件流方式且提示缺少token
+``` javascript
 // 通用下载方法
 let uploadAxios = axios.create({
   baseURL: process.env.NODE_ENV === 'development' ? process.env.VUE_APP_BASE_API : ''
 })
 download(url, params, filename) {
   return uploadAxios
-    .post(`${serviceUrl}${url}`, params, {
-transformRequest: [
-params => {
-return tansParams(params)
-}
-],
-headers: {
-'Content-Type': 'application/x-www-form-urlencoded',
-'Authorization': 'Bearer ' + JwtService.getToken()
-},
-responseType: 'blob'
-})
+.post(`${serviceUrl}${url}`, params, {
+																			transformRequest: [
+																				params => {
+																					return tansParams(params)
+																				}
+																			],
+																			headers: {
+																				'Content-Type': 'application/x-www-form-urlencoded',
+																				'Authorization': 'Bearer ' + JwtService.getToken()
+																			},
+																			responseType: 'blob'
+																		})
 .then(stream => {
-fileObject.storageFile(stream.data, filename)
+	fileObject.storageFile(stream.data, filename)
 })
 .catch(() => {})
 },
@@ -353,95 +358,109 @@ fileObject.storageFile(stream.data, filename)
 - @param filename
   \*/
   storageFile(stream, filename) {
-  const blob = new Blob([stream])
-  if ('download' in document.createElement('a')) {
-  const elink = document.createElement('a')
-  elink.download = filename
-  elink.style.display = 'none'
-  elink.href = URL.createObjectURL(blob)
-  document.body.appendChild(elink)
-  elink.click()
-  URL.revokeObjectURL(elink.href)
-  document.body.removeChild(elink)
-  } else {
-  navigator.msSaveBlob(blob, filename)
-  }
+	  const blob = new Blob([stream])
+	  if ('download' in document.createElement('a')) {
+		  const elink = document.createElement('a')
+		  elink.download = filename
+		  elink.style.display = 'none'
+		  elink.href = URL.createObjectURL(blob)
+		  document.body.appendChild(elink)
+		  elink.click()
+		  URL.revokeObjectURL(elink.href)
+		  document.body.removeChild(elink)
+	  } else {
+	  	navigator.msSaveBlob(blob, filename)
+	  }
   },
   export default fileObject
-  18.dialog 的 custom-class 下设置 deep 不生效
-  // 不生效的方式
-  <el-dialog custom-class="neu-error-msg"></el-dialog>
-  .neu-error-msg {
-  ::v-deep .el-dialog\_\_body {
-  height: 512px;
-  overflow: auto;
-  }
-  }
+```
+## 18.dialog 的 custom-class 下设置 deep 不生效
+``` html
+// 不生效的方式
+<el-dialog custom-class="neu-error-msg"></el-dialog>
+```
 
+``` scss
+.neu-error-msg {
+::v-deep .el-dialog\_\_body {
+	height: 512px;
+	overflow: auto;
+	}
+}
+```
+
+``` html
 // 生效：套一层 div
 
 <div class="neu-error-msg">
   <el-dialog></el-dialog>
 </div>
+```
 
+``` scss
 .neu-error-msg {
-::v-deep .el-dialog\_\_body {
-height: 512px;
-overflow: auto;
+	::v-deep .el-dialog\_\_body {
+		height: 512px;
+		overflow: auto;
+	}
 }
-}
+```
 ## 18.onMounted 调用时报错：onMounted is called when there is no active component instance to be associated with. Lifecycle injection APIs can only be used during execution of setup(). If you are using async setup(), make sure to register lifecycle hooks before the first await statement.
+
+``` javascript
 const props = defineProps({
-modelValue: {
-type: Object,
-default: () => {}
+	modelValue: {
+	type: Object,
+	default: () => {}
 }
 })
 const props = defineProps({
-modelValue: {
-type: Object,
-default: () => {}
+	modelValue: {
+	type: Object,
+	default: () => {}
 }
 })
 onMounted(() => {
-getList()
+	getList()
 })
 const getList = async() => {
-const res = await publistedListApi()
-if (res && res.data) {
-dialogTable.data = res.data
-}
+	const res = await publistedListApi()
+	if (res && res.data) {
+		dialogTable.data = res.data
+	}
 }
 原因：可能时 setUp 中有异步方法
 解决：onMounted 放在顶部调用
+``` vue
 onMounted(() => {
-getList()
+	getList()
 })
 const router = useRouter()
 cxt.mmsg({
-text: '复制成功',
-variant: 'success',
-autoHideDelay: 2000
+	text: '复制成功',
+	variant: 'success',
+	autoHideDelay: 2000
 })
 const props = defineProps({
-modelValue: {
-type: Object,
-default: () => {}
-}
+	modelValue: {
+	type: Object,
+	default: () => {}
+	}
 })
 
 const emit = defineEmits(['importMetric'])
 
 const multipleSelection = ref([])
 const handleSelectionChange = (val) => {
-multipleSelection.value = val
+	multipleSelection.value = val
 }
 const getList = async() => {
-const res = await publistedListApi()
-if (res && res.data) {
-dialogTable.data = res.data
+	const res = await publistedListApi()
+	if (res && res.data) {
+		dialogTable.data = res.data
+	}
 }
-}
+```
 ## 19.element table 将多选框改为单选框的方法
 element table 将多选框改为单选框的方法
 
