--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -429,9 +429,10 @@ const getList = async() => {
 		dialogTable.data = res.data
 	}
 }
+```
 原因：可能时 setUp 中有异步方法
 解决：onMounted 放在顶部调用
-``` vue
+``` JAVASCRIPT
 onMounted(() => {
 	getList()
 })
@@ -462,19 +463,19 @@ const getList = async() => {
 }
 ```
 ## 19.element table 将多选框改为单选框的方法
-element table 将多选框改为单选框的方法
 
+``` javascript
 // 只能单选，其他非禁选
 // tableRef table 的 ref
 // multipleSelection 选中项
 const handleSelectionChange = (selection) => {
-if (selection.length > 1) {
-tableRef.value.clearSelection()
-multipleSelection.value = selection.pop()
-tableRef.value.toggleRowSelection(multipleSelection.value)
-} else {
-multipleSelection.value = selection
-}
+	if (selection.length > 1) {
+		tableRef.value.clearSelection()
+		multipleSelection.value = selection.pop()
+		tableRef.value.toggleRowSelection(multipleSelection.value)
+	} else {
+		multipleSelection.value = selection
+	}
 }
 
 // 非单选框，但只能选择一项其他选项禁选
@@ -484,89 +485,98 @@ multipleSelection.value = selection
 // multipleSelection 选中项
 // dialogTable.data table 数据
 const handleSelectionChange = (selection) => {
-multipleSelection.value = selection
-let targetSystemId
-if (selection.length) { // 选中一个则禁选其他
-targetSystemId = selection[0].targetSystemId
-dialogTable.data.filter(item =>
-item.targetSystemId !== targetSystemId
-).map(mItem => {
-mItem.canChoose = false
-return mItem
-})
-} else { // 未选中则都可选
-dialogTable.data.map(mItem => {
-mItem.canChoose = true
-return mItem
-})
+	multipleSelection.value = selection
+	let targetSystemId
+	if (selection.length) { // 选中一个则禁选其他
+		targetSystemId = selection[0].targetSystemId
+		dialogTable.data.filter(item =>
+			item.targetSystemId !== targetSystemId
+		).map(mItem => {
+			mItem.canChoose = false
+			return mItem
+		})
+	} else { // 未选中则都可选
+		dialogTable.data.map(mItem => {
+			mItem.canChoose = true
+			return mItem
+		})
+	}
 }
-}
+```
 ## 20.echart tree 滚轮缩放页面时，字体同时缩放
+``` javascript
 // mousewheel 是鼠标滚轮事件
 onMounted(() => {
-// 注册 mousewheel
-myChart.getZr().on('mousewheel', fontSizeZoom)
+	// 注册 mousewheel
+	myChart.getZr().on('mousewheel', fontSizeZoom)
 })
 onUnmounted(() => {
-// 销毁 mousewheel
-myChart.getZr().off('mousewheel')
+	// 销毁 mousewheel
+	myChart.getZr().off('mousewheel')
 })
 const fontSizeZoom = () => {
-// 要通过 getOption 获取 zoom，不能直接通过 option.series[0].zoom 获取
-// 因为 getOption 可以动态获取缩放后的 zoom
-let option = myChart.getOption()
-let zoom = option.series[0].zoom
-echartsData.label.fontSize = 15 _ zoom
-echartsData.symbolSize = 7 _ zoom
-if (Object.prototype.hasOwnProperty.call(echartsData, 'children')) {
-handleChildrenFontZoom(zoom, echartsData.children)
-}
-option.series[0].data = echartsData
+	// 要通过 getOption 获取 zoom，不能直接通过 option.series[0].zoom 获取
+	// 因为 getOption 可以动态获取缩放后的 zoom
+	let option = myChart.getOption()
+	let zoom = option.series[0].zoom
+	echartsData.label.fontSize = 15 _ zoom
+	echartsData.symbolSize = 7 _ zoom
+	if (Object.prototype.hasOwnProperty.call(echartsData, 'children')) {
+		handleChildrenFontZoom(zoom, echartsData.children)
+	}
+	option.series[0].data = echartsData
 }
 const option = {
-series: [
-{
-type: 'tree',
-data: [echartsData]
+	series: [
+	{
+		type: 'tree',
+		data: [echartsData]
+	}
+	]
 }
-]
-}
+```
 ## 21.tabs 简单切换的情况下最好自己写样式，用 el-tabs 时内容的撑开是一个问题
-解决方式： 1.计算高度，减去上面内容的高度
-2.flex 布局实现有些麻烦，flex 需要一层一层的嵌套下去才能生效，而 ele-tabs 封装了很多层，
+解决方式： 
+- 1.计算高度，减去上面内容的高度
+- 2.flex 布局实现有些麻烦，flex 需要一层一层的嵌套下去才能生效，而 ele-tabs 封装了很多层，
 需要自己 deep 去一层一层改，比较麻烦
 
 ## 22.警告 v-deep
 ::v-deep usage as a combinator has been deprecated. Use :deep(<inner-selector>) instead. 23.使用 element-ui form 表单时，resetField 重置表单是根据 form 的初始值进行重置，比如使用的是 prop 动态传入的 form 值，那重置是按照每次传入的 prop 值进行重置
-## 24.chrome 上切片的视频不支持拖拽，切片后的视频格式是 m3u8，设计如此，firefox 上支持拖拽
+## 24.chrome 上切片的视频不支持滑动进度条，切片后的视频格式是 m3u8，设计如此，firefox 上支持拖拽
 ## 25.el-form 表单校验，非必填项但输入后有限制要求的写法
 A：el-form-item 绑定 prop
 B：rules 中定义绑定的 prop 值，设置 required：false
+``` html
 <el-form-item label="课程方向" prop="courseDirection">
 <el-input v-model="editForm.form.courseDirection" clearable placeholder="请输入课程方向" />
 </el-form-item>
+```
 
+``` javascript
 courseDirection: [
 { required: false, min: 1, max: 30, message: '长度在 1 到 30 个字符', trigger: 'blur' },
 { pattern: /^\S.*\S$|(^\S{0,1}\S$)/, message: '首尾不允许输入空格', trigger: 'blur' }
 ],
 
+```
+
 2023.06.12 云实训项目问题汇总
 ## 26.elementPlus-upload 上传文件过程中，中断上传操作(一般用于文件过大，关闭上传弹框后中断上传操作)
+
+``` javascript
 import axios from 'axios'
 
 const CancelToken = axios.CancelToken
 // formData 中在 http 头部添加 cancelToken 参数
-## 27.element-pluss form
-原因
-
-在一个 form 表单中，若只有一个 input，按回车键表单会自动提交，但是当表单中存在多个 input 时，按回车键不会执行任何操作，这是 form 表单的一个特性。
+```
+## 27.element-pluss form表单点击回车触发表单上传
+原因：在一个 form 表单中，若只有一个 input，按回车键表单会自动提交，但是当表单中存在多个 input 时，按回车键不会执行任何操作，这是 form 表单的一个特性。
 
 解决方案
-1、直接去除掉 form 表单。
-2、再加一个 input，需要设置成 <input type="text" class="form-control" style="display:none"> 。
-3、给 input 加上回车事件直接 return false。
+- 1、直接去除掉 form 表单。
+- 2、再加一个 input，需要设置成 <input type="text" class="form-control" style="display:none"> 。
+- 3、给 input 加上回车事件直接 return false。
 在 input 加上 οnkeydοwn="if(event.keyCode==13){return false;} 。
 4、直接阻止 form 表单的提交，在 form 表单加入 οnsubmit="return false;"。
 
-图片: https://uploader.shimo.im/f/N8SEyYLWZa85WUSF.png!thumbnail?accessToken=eyJhbGciOiJIUzI1NiIsImtpZCI6ImRlZmF1bHQiLCJ0eXAiOiJKV1QifQ.eyJleHAiOjE2OTY4Mzc2NjIsImZpbGVHVUlEIjoiMGwzTlZNNVFtTFVNSk0zUiIsImlhdCI6MTY5NjgzNzM2MiwiaXNzIjoidXBsb2FkZXJfYWNjZXNzX3Jlc291cmNlIiwidXNlcklkIjo0NzU2NTUxNn0.KImqiDXL2r0Y7YtzAOQS1HkDLFG9e8K_4qFQMLouwqU
