--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -575,8 +575,8 @@ const CancelToken = axios.CancelToken
 
 解决方案
 - 1、直接去除掉 form 表单。
-- 2、再加一个 input，需要设置成 <input type="text" class="form-control" style="display:none"> 。
-- 3、给 input 加上回车事件直接 return false。
-在 input 加上 οnkeydοwn="if(event.keyCode==13){return false;} 。
-4、直接阻止 form 表单的提交，在 form 表单加入 οnsubmit="return false;"。
+- 2、再加一个 input，需要设置成 ```<input type="text" class="form-control" style="display:none"> ``` 
+- 3、给 input 加上回车事件直接 return false
+在 input 加上 οnkeydοwn="if(event.keyCode==13){return false;} 
+- 4、直接阻止 form 表单的提交，在 form 表单加入 οnsubmit="return false
 
