--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -567,8 +567,56 @@ courseDirection: [
 ``` javascript
 import axios from 'axios'
 
+const fileObject = {
+putObject(data) {
+    return uploadAxios.post('/content/s3/putObject', data, {
+      headers: {
+        'Content-Type': 'multipart/form-data'
+      }
+    })
+  }
+}
+
 const CancelToken = axios.CancelToken
-// formData 中在 http 头部添加 cancelToken 参数
+const cancel = ref(null)
+
+
+const beforeUpload = (file) => {
+	const formData = new FormData()
+	  formData.append('files', raw)
+	  formData.append('source', store.getters.source)
+	  formData.append('bucketName', store.getters.bucketName)
+	  formData.append('index', store.getters.index)
+	// formData 中在 http 头部添加 cancelToken 参数
+	  fileObject.putObject(
+	    formData,
+	    () => {}, // 要有一个匿名自掉函数
+	    new CancelToken(function (c) {
+	      cancel.value = c
+	    })
+	  )
+	    .then((res) => {
+	      const { code, data, msg } = res
+	      uploading.value = false
+	      if (code === 200) {
+	        const eid = data?.[0].eid
+	        dialogForm.form.fileEid = eid
+	        dialogForm.form.fileName = name
+	      } else {
+	        ElMessage.error(`${msg}`)
+	      }
+	    })
+	    .catch(() => {
+	      uploading.value = false
+	    })
+}
+
+// 上传过程中 调用取消上传
+const cancelUpload = () => {
+  if (typeof cancel.value == 'function') {
+    cancel.value()
+  }
+}
 ```
 ## 27.element-pluss form表单点击回车触发表单上传
 原因：在一个 form 表单中，若只有一个 input，按回车键表单会自动提交，但是当表单中存在多个 input 时，按回车键不会执行任何操作，这是 form 表单的一个特性。
