--- a/项目总的问题汇总.md
+++ b/项目总的问题汇总.md
@@ -628,3 +628,5 @@ const cancelUpload = () => {
 在 input 加上 οnkeydοwn="if(event.keyCode==13){return false;} 
 - 4、直接阻止 form 表单的提交，在 form 表单加入 οnsubmit="return false
 
+## 28.el-form表单重置resetForm()不生效问题
+现象：调用表单的resetFields()方法，不清空表单字段或者不生效
